# VoPaT

./: .gitmodules  CMakeLists.txt  README.md  push-bins.sh  script-vopat-small.sh  script.build-lander.huge.sh
common/: CMakeLists.txt  CUDAArray.h  Prof.h  vopat.h
common/mpi/: Comms.h  MPIBackend.cpp  MPIBackend.h  MPICommon.h  MPIMaster.cpp  MPIMaster.h  MPIRenderer.h  MPIWorker.cpp  MPIWorker.h
model/: Brick.cpp  Brick.h  CMakeLists.txt  Config.cpp  Config.h  IO.h  Model.cpp  Model.h  ModelConfig.cpp  StructuredModel.cpp  StructuredModel.h  UMeshModel.cpp  UMeshModel.h  makeMagField.cpp  partitionUMesh.cpp  partitionUMeshObjectSpace.cpp  partitionUMeshSpatially.cpp  splitter.cpp
rafl/: .#rafl.h  rafl.h  rafl_host.h
viewer/: AppInterface.cpp  AppInterface.h  CMakeLists.txt  VopatMPIRenderer.h  headless.cpp  isoDialog.cpp  isoDialog.h  isoDialog.ui  qtViewer.cpp  stackTifs.cpp  viewer.cpp
vopat/: AddLocalFBsLayer.cu  AddLocalFBsLayer.h  AddWorkersRenderer.cu  AddWorkersRenderer.h  CMakeLists.txt  Camera.h  CellMarchRenderer.cu  DDA.h  DeviceKernels.h  DistributedRendererBase.cu  DistributedRendererBase.h  ForwardingLayer.cu  ForwardingLayer.h  Intersection.h  LaunchParams.h  MacroCell.cu  MacroCell.h  Marcher.cu  Marcher.h  ModelConfig.cpp  ModelConfig.h  NextDomainKernel.cu  NextDomainKernel.h  NodeRenderer.cu  NodeRenderer.h  Ray.h  RayForwardingRenderer.cu  RayForwardingRenderer.h  Renderer.cpp  Renderer.h  SimpleNodeRenderer.cu  StepMarchRenderer.cu  SurfaceIntersector.h  Volume.cu  Volume.h  VolumeRendererBase.cu  VolumeRendererBase.h  VopatBase.h  VopatRenderer.cu  VopatRenderer.h  (+13 more)
vopat/model/: Brick.cpp  Brick.h  IO.h  Model.cpp  Model.h  fitsToRaw.cpp  macrocells.cpp  makeMagField.cpp  ncToRaw.cpp  splitter.cpp
vopat/mpi/: Comms.h  MPIBackend.cpp  MPIBackend.h  MPICommon.h  MPIMaster.cpp  MPIMaster.h  MPIRenderer.h  MPIWorker.cpp  MPIWorker.h  miniApp-cudaAware.cu
vopat/render/: AddWorkersRenderer.cu  CUDAArray.h  Camera.h  CellMarchRenderer.cu  Comms.h  DDA.h  DistributedRendererBase.cu  DistributedRendererBase.h  IntentionallyWrong.cu  LocalDeviceRenderer.cu  LocalDeviceRenderer.h  MacroCell.cu  MacroCell.h  NextDomainKernel.cu  NextDomainKernel.h  NodeRenderer.cu  NodeRenderer.h  OptixRenderer.cpp  OptixRenderer.cu  OptixRenderer.h  Ray.h  RayForwardingRenderer.cu  RayForwardingRenderer.h  Renderer.cpp  Renderer.cu  Renderer.h  SimpleNodeRenderer.cu  StepMarchRenderer.cu  SurfaceIntersector.h  TrivialNodeRenderer.cu  VolumeRendererBase.cu  VolumeRendererBase.h  VopatBase.cu  VopatBase.h  VopatRenderer.cu  VopatRenderer.h  VoxelData.h  Woodcock.cu  Woodcock.h  genPrimaryWave.h
vopat/surface/: MeshGeom.cpp  MeshGeom.h
vopat/umesh/: qbvh.h
vopat/volume/: MCGrid.cu  MCGrid.h  StructuredVolume.cu  StructuredVolume.h  UMeshVolume.cu  UMeshVolume.h  Volume.cpp  Volume.h
